Remove dependencies
Moved to .localrc file